@@ -5,14 +5,14 @@
 
 package xyz.zhangbohan.common.tools;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+
 
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
 import java.security.SecureRandom;
+import java.util.Base64;
 
 /**
  * file encoding: utf-8
@@ -61,7 +61,8 @@ public class AesUtils{
 			//这里用Base64Encoder中会找不到包
 			//解决办法：
 			//在项目的Build path中先移除JRE System Library，再添加库JRE System Library，重新编译后就一切正常了。
-			String AES_encode= new BASE64Encoder().encode(byte_AES);
+			Base64.Encoder encoder = Base64.getEncoder();
+			String AES_encode = new String(encoder.encode(byte_AES));
 			//11.将字符串返回
 			return AES_encode;
 		} catch (Exception e) {
@@ -99,7 +100,8 @@ public class AesUtils{
 			//7.初始化密码器，第一个参数为加密(Encrypt_mode)或者解密(Decrypt_mode)操作，第二个参数为使用的KEY
 			cipher.init(Cipher.DECRYPT_MODE, key);
 			//8.将加密并编码后的内容解码成字节数组
-			byte [] byte_content= new BASE64Decoder().decodeBuffer(content);
+			Base64.Decoder decoder = Base64.getDecoder();
+			byte[] byte_content = decoder.decode(content);
 			/*
 			 * 解密
 			 */
